# legal_reward_models

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  data_analysis_prompt.md  orchestrator_prompt.md  pyproject.toml
.agents/: AGENTS.md  PROMPT_TEMPLATE.md  STYLE.md
.agents/tasks/: debug.md  feature.md  refactor.md
container/: build.sh  llm-cpu.def  llm.def  smoke_test_cpu.sh  smoke_test_gpu.sh
notebooks/: dataset_viewer.ipynb  eda.ipynb
scripts/: run_vllm_inference.py
tasks/: debug.md  feature.md  refactor.md
tests/: test_run_vllm_inference.py
